app/Resources/public/less/sections/accueil.less
body {
    &.accueil {
        background-color: @bleu;
        color: white;

        #mazoutage {
            @tailleHeight: 25em;
            position: fixed;
            left: 0;
            right: 0;
            width: 100%;
            margin: 0 auto;
            margin-top: 2em;
            height: @tailleHeight;
            line-height: @tailleHeight;
            z-index: 100;

            @media @tablet {
                font-size: 1.5em;
            }

            text-align: center;
            color: white;

            background: transparent url('images/consos/Mazout-N.png') no-repeat;
            background-position: center;
            background-size: contain;

            div.contenu {
                width: 40%;
                @media @desktop {
                    width: 30%;
                }
                @media @large {
                    width: 20%;
                }
                vertical-align: middle;
                display: inline-block;
                line-height: normal;

                p.fermer {
                    text-align: right;
                    font-size: x-small;

                    a {
                        color: @gris-clair;
                        cursor: pointer;
                    }
                }
            }

        }

        #etatComptes {
            h1 {
                .text-center();
                margin-bottom: 0.5em;
            }

            .progress {
                width: 100%;
                min-height: 16em;
                margin-bottom: 0px;
                .box-shadow(2px 3px 3px 1px rgba(0, 0, 0, 0.1));
            }

            .progress-bar {
                &.bg-rouge {
                    background: @rouge linear-gradient(to right, rgba(0,0,0,0) 0%,  rgba(0,0,0,0.1) 100%);
                }

                &.bg-jaune {
                    background: @jaune linear-gradient(to right, rgba(0,0,0,0) 0%,  rgba(0,0,0,0.1) 100%);
                }

                &.bg-vert {
                    background: @vert linear-gradient(to right, rgba(0,0,0,0) 0%,  rgba(0,0,0,0.1) 100%);
                }

                border-radius: 5px 5px 0 0;
            }

            .prix {
                position: absolute;
                bottom: 0.5em;
                width: 100%;
                z-index: 1;
                background-color: rgba(255, 255, 255, 0.2);
            }

            #comptesImgLabel {
                .boquette {
                    background: #fefefe linear-gradient(to right, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.1) 100%);
                    padding-top: 0.2em;
                    padding-bottom: 0.2em;
                    .box-shadow(2px 4px 3px 0px rgba(0, 0, 0, 0.1));
                    border-radius: 0 0 5px 5px;

                    img {
                        height: 1.5em;
                    }
                }
            }

            #comptesTextLabel {
                .boquette {
                    text-transform: uppercase;
                    margin-top: 0.5em;
                }
            }

            #plusDeDetails {
                .text-larger();
                .text-right();

                .glyphicon {
                    .text-larger();
                    color: @rouge;
                }

                a {
                    color: @gris-clair;
                }
            }
        }

        #anniversaires {
            text-align: center;
            margin-bottom: 1em;

            div {
                display: inline-block;
                text-align: left;
                max-width: 20em;

                h1 {
                    text-transform: none !important;
                    margin-bottom: 0;
                }

                a {
                    font-size: 1.3em;
                }
            }
        }

        #connectedPeople {
            @height: 6em;
            height: @height;
            white-space: nowrap;
            margin-bottom: 1em;

            a.show_users {
                color: @rouge;
            }

            div {
                vertical-align: middle;
                display: inline-block;
                line-height: normal;
                font-size: 1.1em;

                @media @tablet {
                    font-size: 1.2em;
                }

                span {
                    font-size: 1.5em;
                }
            }

            img {
                display: inline;
                margin-right: 1em;
                max-height: 100%;
            }
        }

        #actus {
            background: transparent url('images/accueil/Cafe.png') no-repeat;
            background-position: 90% top;
            background-size: 30%;

            @media @tablet {
                background-position: 90% top;
                background-size: 20%;
            }

            @media @desktop {
                background-position: right top;
                background-size: 30%;
            }

            @media @large {
                background-position: right top;
                background-size: 40%;
            }

            .en-tete-actus {
                .font-huitcentsix();
                margin-top:0;
                border-top: 2px solid;
                border-bottom: 2px solid;
                position:relative;
            }

            li {
                margin-bottom: 1em;
                line-height: 1.4em;
            }

            .titreArticle {
                .text-larger();
                .text-uppercase();
                .text-noir();

                > span {
                    font-size: 1.62em;
                    .font-huitcentsix();
                }
            }
        }

        #bonjourGadzarts {
            text-align: center;

            h1 {
                padding: 0.4em 0.5em 0.4em 0.5em;
                background-color: @rose;
                color: white;
                text-transform: none !important;
                display: inline-block;
                white-space: nowrap;
            }

            #photoContainer {
                padding-top: 1em;
                margin-left: 1em;
                margin-right: 1em;
                .rotate(-2deg);

                #photo {
                    background-color: white;

                    img {
                        .center-block;
                        width: 100%;
                        padding-top: 1em;
                        padding-bottom: 0.5em;
                    }
                }

                #photo:before {
                    // bout de scotch
                    @width: 100px;
                    position: absolute;
                    top: -12px;
                    left: calc(~"50% - " @width/2);

                    content: "";

                    height: 20px;
                    width: @width;

                    background: rgba(255,255,255,0.3);
                    box-shadow: 0px 1px 3px rgba(0,0,0,0.3);
                }

                #legende {
                    bottom: 1px;
                    background-color: white;
                    color: black;
                    text-align: center;
                    .text-larger();
                    .font-lobster();
                }
            }

            #hm {
                margin-top: 2em;

                img {
                    height: 1.5em;
                    position: relative;
                    bottom: 3px;
                    margin-right: 1em;
                }

                p {
                    .text-larger();
                }
            }

            #enVoirPlus {
                .text-larger();
                text-align: right;

                a {
                    color: white;

                    .glyphicon {
                        .text-larger();
                        color: @rose;
                    }
                }
            }
        }

        #aVenir {
            #plusDeDetails {
                margin-top: 2em;
                .text-larger();
                text-align: center;

                a {
                    color: white;

                    .glyphicon {
                        .text-larger();
                        color: @rouge;
                    }
                }
            }
        }
    }
}

